fix integ tests
Signed-off-by: Varun Jain <varunudr@amazon.com>